--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>travelbmi</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">hello</div>
     <!-- built files will be auto injected -->
   </body>
 </html>
